--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,22 +4,22 @@
     <item
         android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/profile_im_background"/>
+        android:icon="@drawable/nav_bar_home"/>
 
     <item
         android:id="@+id/my_threads"
         android:title="My threads"
-        android:icon="@drawable/profile_im_background"/>
+        android:icon="@drawable/nav_bar_my_threds"/>
     <item
-        android:id="@+id/favorits"
+        android:id="@+id/favorites"
         android:title="Favorits"
-        android:icon="@drawable/profile_im_background"/>
+        android:icon="@drawable/nav_bar_favorites"/>
     <item
         android:id="@+id/my_profile"
         android:title="My profile"
-        android:icon="@drawable/profile_im_background"/>
+        android:icon="@drawable/nav_bar_profile"/>
     <item
         android:id="@+id/more"
         android:title="More"
-        android:icon="@drawable/profile_im_background"/>
+        android:icon="@drawable/nav_bar_more"/>
 </menu>
