--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--<androidx.constraintlayout.widget.ConstraintLayout> -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="420dp"
-        android:layout_height="70dp"
-        android:textColor="#000000"
-        android:backgroundTint="#C4C4C4"
-        android:text="@string/home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragment_container"
+        android:layout_above="@+id/bottom_navigation_bar"/>
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
@@ -31,11 +26,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:layout_gravity="top"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"/>
+
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
@@ -43,23 +41,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
         android:text="@string/diagnostics"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="140dp"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
@@ -67,11 +69,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="210dp"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
@@ -79,11 +83,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="280dp"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
@@ -91,63 +97,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="350dp"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
+
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="420dp"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:textColor="#000000"
         android:backgroundTint="#C4C4C4"
         android:text="@string/tuning"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="420dp"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottom_bar_app"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation_view"
+            android:id="@+id/bottom_navigation_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="18dp"
-            android:backgroundTint="@android:color/transparent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             app:menu="@menu/bottom_nav_menu"/>
 
-    </com.google.android.material.bottomappbar.BottomAppBar>
 
 
+</RelativeLayout>
 
 
-<!--
-    <FrameLayout
-    android:id="@+id/flFragment"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.5"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="88dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
--->
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-<!--<androidx.constraintlayout.widget.ConstraintLayout>-->
