--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,7 @@
 
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/rules"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -26,12 +26,11 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"/>
+        android:layout_marginTop="0dp"/>
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/discussions"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -41,11 +40,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="70dp"
-        app:layout_constraintTop_toBottomOf="@+id/button1" />
+        android:layout_marginTop="70dp"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/diagnostics"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:backgroundTint="#C4C4C4"
@@ -55,11 +53,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="140dp"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        android:layout_marginTop="140dp"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/legislature"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -69,11 +66,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="210dp"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        android:layout_marginTop="210dp"/>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/parts"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -83,11 +79,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="280dp"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        android:layout_marginTop="280dp"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/maitenance"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -97,12 +92,11 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="350dp"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        android:layout_marginTop="350dp"/>
 
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/tuning"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:backgroundTint="#C4C4C4"
@@ -112,9 +106,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_gravity="top"
-        android:layout_marginTop="420dp"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
-
+        android:layout_marginTop="420dp"/>
 
 
 
@@ -148,31 +140,31 @@
         android:theme="?attr/actionBarTheme" >
 
         <ImageButton
-            android:id="@+id/imageButton1"
+            android:id="@+id/navButtHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             app:srcCompat="@drawable/nav_bar_home" />
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/navButtMyposts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             app:srcCompat="@drawable/nav_bar_my_threds" />
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/navButtFavorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             app:srcCompat="@drawable/nav_bar_favorites" />
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/navButtProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             app:srcCompat="@drawable/nav_bar_profile" />
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/navButtMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
