--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -30,6 +30,13 @@
             android:layout_marginStart="10dp"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
+        <ImageButton
+            android:id="@+id/topBarAddPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.appcompat.widget.Toolbar
