Created post activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,7 +44,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="280dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="username"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +58,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="320dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="role"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +72,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="355dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="Registered"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +87,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="390dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="threads{num}"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +101,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="428dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="comments{num}"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +115,6 @@
         android:layout_marginStart="140dp"
         android:layout_marginTop="465dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="@+id/profileusername"
         android:text="user ratio"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -212,7 +206,7 @@
         android:id="@+id/profileusername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/textdetails"
         android:layout_marginStart="32dp"
         android:layout_marginTop="66dp"
         android:layout_marginEnd="0dp"
