--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
 
 
     <TextView
-        android:id="@+id/rules"
+        android:id="@+id/catItem1"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="top"
@@ -36,7 +36,7 @@
 
 
     <TextView
-        android:id="@+id/discussions"
+        android:id="@+id/catItem2"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -52,7 +52,7 @@
         android:layout_marginTop="70dp"/>
 
     <TextView
-        android:id="@+id/diagnostics"
+        android:id="@+id/catItem3"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:backgroundTint="#C4C4C4"
@@ -68,7 +68,7 @@
         android:layout_marginTop="140dp"/>
 
     <TextView
-        android:id="@+id/legislature"
+        android:id="@+id/catItem4"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -84,7 +84,7 @@
         android:layout_marginTop="210dp"/>
 
     <TextView
-        android:id="@+id/parts"
+        android:id="@+id/catItem5"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -100,7 +100,7 @@
         android:layout_marginTop="280dp"/>
 
     <TextView
-        android:id="@+id/maitenance"
+        android:id="@+id/catItem6"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:textColor="#000000"
@@ -117,7 +117,7 @@
 
 
     <TextView
-        android:id="@+id/tuning"
+        android:id="@+id/catItem7"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:backgroundTint="#C4C4C4"
