--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -41,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/post_text" />
 
     <Button
+        android:id="@+id/editAddButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edit_post_text"
