--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -6,6 +6,17 @@
     xmlns:tools="http://schemas.android.com/tools">
     android:padding="8dp">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottombar"
+        android:layout_below="@+id/post_text"
+        android:layout_marginTop="48dp"
+        android:clipToPadding="false"
+        android:padding="4dp" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="50dp"
