--- a/app/src/main/res/layout/activity_mypost.xml
+++ b/app/src/main/res/layout/activity_mypost.xml
@@ -6,57 +6,14 @@
     android:layout_height="match_parent">
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/post_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/topBar"
-        android:text="Title"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/post_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/post_title"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:text="User" />
-
-    <ImageView
-        android:id="@+id/post_divider"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/post_title"
-        android:layout_toRightOf="@id/post_user"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="11dp"
-        app:srcCompat="@drawable/ic_baseline_fiber_manual_record_24" />
-
-    <TextView
-        android:id="@+id/post_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/post_title"
-        android:layout_toRightOf="@id/post_divider"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:text="Date" />
-
-    <TextView
-        android:id="@+id/post_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/post_user"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        android:textColor="@android:color/black"
-        android:text="Text" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottombar"
+        android:layout_below="@+id/topBar"
+        android:clipToPadding="false"
+        android:padding="4dp" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/topBar"
@@ -67,19 +24,12 @@
         android:layout_alignParentTop="true"
         android:theme="?attr/actionBarTheme" >
 
-        <ImageButton
-            android:id="@+id/topBarBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
-
         <TextView
             android:id="@+id/topBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
-            android:text="Post"
+            android:text="My Posts"
             android:textColor="@color/white"
             android:textSize="24dp" />
 
