--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_below="@id/topBar"
@@ -57,11 +57,27 @@
         tools:ignore="SmallSp" />
 
     <TextView
-        android:id="@+id/registeredtime"
+        android:id="@+id/profileemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:layout_below="@+id/profilerole"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="5dp"
+
+        android:text="E-mail:"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SmallSp" />
+
+    <TextView
+        android:id="@+id/registeredtime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/profileemail"
         android:layout_marginStart="32dp"
         android:layout_marginTop="5dp"
 
@@ -105,52 +121,6 @@
         tools:ignore="SmallSp" />
 
     <TextView
-        android:id="@+id/userratio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@+id/numcomments"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="5dp"
-
-        android:text="Ratio:"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SmallSp" />
-
-    <TextView
-        android:id="@+id/profileusername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@+id/userratio"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="5dp"
-
-        android:text="@string/role"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SmallSp" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <TextView
         android:id="@+id/hereusername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -168,20 +138,21 @@
         tools:ignore="SmallSp" />
 
     <TextView
-        android:id="@+id/hereuserrole"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    android:id="@+id/hereemail"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 
-        android:layout_below="@+id/profileusername"
-        android:layout_toRightOf="@+id/profileusername"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="-25dp"
+    android:layout_below="@+id/profileemail"
+    android:layout_toRightOf="@+id/profileemail"
+    android:layout_marginStart="86dp"
+    android:layout_marginTop="-25dp"
 
-        android:text="role"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SmallSp" />
+
+    android:text="E-mail"
+    android:textSize="18sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    tools:ignore="SmallSp" />
 
     <TextView
         android:id="@+id/hereregistered"
@@ -232,23 +203,6 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SmallSp" />
 
-    <TextView
-        android:id="@+id/hereRatio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@+id/userratio"
-        android:layout_toRightOf="@+id/userratio"
-        android:layout_marginStart="95dp"
-        android:layout_marginTop="-25dp"
-
-        android:text="user ratio"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SmallSp" />
-
-
 
 
 
@@ -285,14 +239,22 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textEmailAddress"
+        android:layout_below="@+id/numcomments"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-
-
-        android:layout_below="@+id/profileusername"
-        android:layout_toRightOf="@+id/profileusername"
-        android:layout_marginStart="-50dp"
-        android:layout_marginTop="45dp"
-
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="256dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textEmailAddress"
+        android:layout_below="@+id/editTextUsername"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -304,10 +266,9 @@
         android:hint="Password"
         android:inputType="textPassword"
 
-        android:layout_below="@+id/editTextUsername"
-        android:layout_toRightOf="@+id/editTextUsername"
-        android:layout_marginStart="-258dp"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/editTextEmail"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -319,9 +280,8 @@
         android:layout_height="40dp"
 
         android:layout_below="@+id/editTextPassword"
-        android:layout_toRightOf="@+id/editTextPassword"
-        android:layout_marginStart="-258dp"
-        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
 
 
         android:text="Change profile details"
@@ -351,13 +311,6 @@
         android:minHeight="?attr/actionBarSize"
         android:layout_alignParentTop="true"
         android:theme="?attr/actionBarTheme" >
-
-        <ImageButton
-            android:id="@+id/topBarBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
             android:id="@+id/topBarTitle"
